@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [jan] Fix using admin users and passwords for quota or mailbox management.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -2575,7 +2575,7 @@
    <date>2012-07-06</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [jan] Fix using admin users and passwords for quota or mailbox management.
    </notes>
   </release>
  </changelog>
